--- a/bower.json
+++ b/bower.json
@@ -7,7 +7,8 @@
     "angular-touch": "~1.3.4",
     "angular-sanitize": "~1.3.4",
     "bootstrap": "~3.3.1",
-    "angular": "~1.3.4"
+    "angular": "~1.3.4",
+    "ng-lodash": "~0.2.3"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
