--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
     "angular-sanitize": "~1.3.4",
     "bootstrap": "~3.3.1",
     "angular": "~1.3.4",
-    "ng-lodash": "~0.2.3"
+    "ng-lodash": "~0.2.3",
+    "angular-markdown-filter": "~1.2.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
