--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "bootstrap": "~3.3.1",
     "angular": "~1.3.4",
     "ng-lodash": "~0.2.3",
-    "angular-markdown-filter": "~1.2.0"
+    "angular-markdown-filter": "~1.2.0",
+    "angular-ui-router":"~1.4.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
