--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,8 @@
     "angular": "~1.3.4",
     "ng-lodash": "~0.2.3",
     "angular-markdown-filter": "~1.2.0",
-    "angular-ui-router":"~1.4.1"
+    "angular-ui-router":"~1.4.1",
+    "angular-timeline":"*"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.4"
